tests/invalid/all_wrong_arg_count/main.py
def run_case() -> None:
    x: bool = all([1], [0])

if __name__ == "__main__":
    run_case()
